err/django-vcexport.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/django_vcexport-0.6.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/sven'...
Compiling './lib/python3.5/site-packages/sven/backend.py'...
***   File "./lib/python3.5/site-packages/sven/backend.py", line 59
    except pysvn.ClientError, e:
                            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/sven/bzr.py'...
***   File "./lib/python3.5/site-packages/sven/bzr.py", line 160
    except NoSuchRevision, e:
                         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/sven/simple_backend.py'...
***   File "./lib/python3.5/site-packages/sven/simple_backend.py", line 44
    except IOError, e:
                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/sven-0.9.egg-info'...
Listing './lib/python3.5/site-packages/vcexport'...
Listing './share'...
Listing './share/python-wheels'...
